--- a/Sachin.css
+++ b/Sachin.css
@@ -1,14 +1,22 @@
 body {
-    margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
-    background-image: url("bg1.jpg");
+    
+    /* background-image: url(best-image.jpg);
+    height: 80vh;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover; */
   }
-  
   .topnav {
     overflow: hidden;
     background-color: rgb(36, 2, 2);
   }
-  
+  .bg-image {
+    background-image: url(best-image.jpg);
+    height: 100vh;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
   .topnav a {
     float: left;
     color: #f2f2f2;
@@ -27,6 +35,7 @@ body {
     background-color: #4CAF50;
     color: white;
   }
+
   /*article{
       background-color:lightgreen;
       font-size: 15px;
@@ -81,13 +90,13 @@ body {
   h3{
   color:red;}
   p{
-  color:black;}
+  color:green;}
   h5{
   text-align: center;
    text-decoration: underline;
   }
   .img-circle {
-    border-radius: 50%;
+    border-radius: 10%;
     float:right;
 }
   #image{
